backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: backend
