ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: becloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - becloud.io
      secretName: tls-secret
  rules:
    - host: becloud.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
